# py-heed

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
src/heed/: __init__.py  __main__.py  cli.py  formatter.py  transcriber.py
